more program flow

--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -41,6 +41,17 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Teaching online"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
      "slide_type": "slide"
     }
    },
@@ -163,7 +174,7 @@
     "* Dictionaries\n",
     "* String manipulation\n",
     "\n",
-    "_Lots of examples and excerpts are from [Automate the Boring Stuff](https://automatetheboringstuff.com/2e/chapter0/])_\n",
+    "_Lots of examples and excerpts are from [Automate the Boring Stuff](https://automatetheboringstuff.com/2e/chapter0/)_\n",
     "\n"
    ]
   },
@@ -202,6 +213,636 @@
    },
    "source": [
     "You have to get your hands dirty to learn this, which is why we'll add exercises and hand-ins for the course. It's your responsibility to ask questions if something doesn't make sense and we'll slow down and go through."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Hello World!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print('Hello, World!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "No boiler plate code, straight forward."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Running a Python script"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "From the terminal. Save your program as e.g. `myprogram.py` and run from terminal using:\n",
+    "```\n",
+    "python3 myprogram.py\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Pros and cons of different approaches to running"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "VS Code example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Dynamic typing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = 2 # not necessary to declare type\n",
+    "# opposed to java"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Static typing is when variable types are known at compile time. With dynamic typing a variables type is set at run-time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "__Pros__ of dynamic typing:\n",
+    "* Deals naturally with certain types of self-describing data.\n",
+    "* Code can be use polymorphically\n",
+    "* Tends to reduce unnecessary clutter"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "__Cons__ of dynamic typing:\n",
+    "* More errors at run-time\n",
+    "* More errors detected late\n",
+    "* Can give worse performing code than compiled languages"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "##### Example"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## assigning a value to a variable\n",
+    "x = [1, 2, 3]\n",
+    "\n",
+    "## x is a list here\n",
+    "print(type(x))\n",
+    "\n",
+    "## reassigning a value to the 'x'\n",
+    "x = True\n",
+    "\n",
+    "## x is a bool here\n",
+    "print(type(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Python supports your classic basic data types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = 2 # integer\n",
+    "b = 2.0 # float\n",
+    "c = '2' # string\n",
+    "d = int(c)\n",
+    "print(type(d)) # to get the int value of a variable use int()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "#### Exercise?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Program flow\n",
+    "* Boolean values\n",
+    "* Comparison operators\n",
+    "* Conditions (if, else, elif)\n",
+    "* while-loops\n",
+    "* for-loops "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "We'll go through these concepts expecting that you are familiar with these terms from your essential computing 1 course. So we'll rush through, focus on syntax and if this is very foreign to you, make a quick note and read up on the concepts at home."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Boolean values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# boolean values are either True or False\n",
+    "a = True\n",
+    "b = False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Comparison operators"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "| Operator | Meaning                  |\n",
+    "|----------|--------------------------|\n",
+    "| `==`     | Equal to                 |\n",
+    "| `!=`     | Not equal to             |\n",
+    "| `<`      | Less than                |\n",
+    "| `>`      | Greater than             |\n",
+    "| `<=`     | Less than or equal to    |\n",
+    "| `>=`     | Greater than or equal to |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Comparison operators can also work on more complex data types e.g. strings and lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "[1, 2] == [1, 2]     # prints true\n",
+    "[1, 3] != [1, 2]     # prints true\n",
+    "'string' == 'sTring' # prints false\n",
+    "'STRINg' != 'STRING' # prints true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### The `is` operator\n",
+    "Python also has an `is` operator. `is` also compares variables, but their object id and **not** their value!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = [1,2]\n",
+    "b = [1,2]\n",
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "b = 1\n",
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = 257\n",
+    "b = 257\n",
+    "a is b"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Never use `is` for integer comparison! The weirdness above is due to Python's inner-workings, where:\n",
+    "```\n",
+    "The current implementation keeps an array of integer objects for all integers between -5 and 256, when you create an int in that range you actually just get back a reference to the existing object\n",
+    "``` \n",
+    "\n",
+    "From the [Python3 documentation](https://docs.python.org/3/c-api/long.html)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Later in this course we'll go through when to use `is`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Conditions\n",
+    "Conditions can always be evaluated as a Boolean value. Essential program flow and usage in e.g. `if`-statements:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number is higher than 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 5\n",
+    "if a > 2:\n",
+    "    print('Number is higher than 2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Wowowowowo, what's going on here with indentation?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### Indentation and code blocks in Python\n",
+    "Instead of using `{`and `}` as we know from Java, we use indentation for collecting statements in blocks. Blocks start with indentation and ends with unindentation. This can be nested:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if a > 2:\n",
+    "    print('Number is higher than 2')\n",
+    "    if a > 4:\n",
+    "        print('... and number is higher than 4 too!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "Indentation is where things can get messy! Avoid a lot of nested statements and be mindful of `IndentationError`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "if a > 2:\n",
+    "print('Number is higher than 2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### ... back to if Statements!\n",
+    "Will execute a block of code if the statement is `True`. We can also do else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'a' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-5-0182a55a47d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Larger than two'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Smaller than two!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "if a > 2:\n",
+    "    print('Larger than two')\n",
+    "else:\n",
+    "    print('Smaller than two!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### __elif__ Statements\n",
+    "Only executes if a previous statements were `False`! Similar to Java's else-if:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Negative number\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = -4\n",
+    "if num > 0:\n",
+    "    print(\"Positive number\")\n",
+    "elif num == 0:\n",
+    "    print(\"Zero\")\n",
+    "else:\n",
+    "    print(\"Negative number\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "![title](images/if_elif_else_statement.jpg)\n",
+    "_Flowchart from [programiz](https://www.programiz.com/python-programming/if-elif-else)_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Exercise!\n",
+    "* Create a program that prints the letters of a word one-by-one\n",
+    "* Calculates the length of a string, without using the `len()` function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Exercise for next time\n",
+    "* Rock, paper, scissors?"
    ]
   },
   {
