--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -172,10 +172,8 @@
     "* Functions\n",
     "* Lists\n",
     "* Dictionaries\n",
-    "* String manipulation\n",
     "\n",
-    "_Lots of examples and excerpts are from [Automate the Boring Stuff](https://automatetheboringstuff.com/2e/chapter0/)_\n",
-    "\n"
+    "_Lots of examples and excerpts are from [Automate the Boring Stuff](https://automatetheboringstuff.com/2e/chapter0/)_"
    ]
   },
   {
@@ -644,21 +642,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number is higher than 2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 5\n",
     "if a > 2:\n",
@@ -743,25 +733,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'a' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-0182a55a47d4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0ma\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Larger than two'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Smaller than two!'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'a' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if a > 2:\n",
     "    print('Larger than two')\n",
@@ -783,21 +761,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Negative number\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num = -4\n",
     "if num > 0:\n",
@@ -828,9 +798,305 @@
     }
    },
    "source": [
-    "### Exercise!\n",
+    "### _while_ loops\n",
+    "Executes a block of code as long as a statement is `True`. Always consists of:\n",
+    "1. `while` keyword\n",
+    "2. a condition\n",
+    "3. a colon `:`\n",
+    "4. indenten code code"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = True\n",
+    "while a:\n",
+    "    print('Hello, World!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# from automatetheboringstuff.com\n",
+    "name = \"\"\n",
+    "while name != \"your name\":\n",
+    "    print('Please type your name')\n",
+    "    name = input()\n",
+    "print('Thank you,' + name + '!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### `break` from loops\n",
+    "You can use the keyword `break` to break out of loops. When `break`is reached, a loop is exited."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "while True:\n",
+    "    print('Enter the number 18')\n",
+    "    num = input()\n",
+    "    if int(num) == 18: # notice the casting to int\n",
+    "        break"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### _for loops_ and using `range()`\n",
+    "`for` loops can be used for executing a block a certain number of times or iterating through all elements in a container. In the case of the former, we need the following elements:\n",
+    "1. `for` keyword\n",
+    "2. variable name\n",
+    "3. `in` keyword\n",
+    "4. calling the `range()` method\n",
+    "5. a colon `:`\n",
+    "6. an indented code block\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "##### what is `range()`?\n",
+    "```\n",
+    "The range type represents an immutable sequence of numbers and is commonly used for looping a specific number of times in for loops.\n",
+    "```\n",
+    "[Python docs](https://docs.python.org/3/library/stdtypes.html#typesseq-range)\n",
+    "\n",
+    "`range()` is an overloaded method and can thereby take different number of input arguments. It's usually used as `range(stop)`, but can also be used as `range(start, stop)` or `range(start, stop, step)`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# notice that we convert to lists below to see elements in the range\n",
+    "print(list(range(10)))\n",
+    "print(list(range(1, 11)))\n",
+    "print(list(range(0, 30, 5)))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "### using `range()`in _for_ loops\n",
+    "Now that we have a sequence of numbers, we can use `for`to iterate through each number in that sequence. This is similar to for-loops in Java."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(5):\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Using Java:\n",
+    "```java\n",
+    "for(int i = 0; i < 5; i++){\n",
+    "    System.out.print(i);\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Exercises!\n",
+    "* Iterate through all odd numbers between 5 and 27 using `range()`\n",
+    "* Count from 1 to 10 using a `while`-loop and break out afterwards\n",
     "* Create a program that prints the letters of a word one-by-one\n",
-    "* Calculates the length of a string, without using the `len()` function"
+    "* Make a \"guess the number game\", where you break out of a `while` loop if the users guesses a number between 1 and 10. Use the code below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "random.randint(0,10) # first argument is start, second is stop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Functions\n",
+    "* Defining functions\n",
+    "* input parameters\n",
+    "* return values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### What are functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### input parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### return values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Exercise - 25 minutes\n",
+    "* Create a function with two input arguments that returns that product of these two numbers\n",
+    "* Create a function that returns True if input is string `interactive`\n",
+    "* Create a function `string_length(a)` that returns the length of a string, without using the `len()` function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Lists\n",
+    "* What are lists?\n",
+    "* Creating lists\n",
+    "* Inserting, removing and changing elements\n",
+    "* iterating through lists\n",
+    "* `len()` function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Exercises\n",
+    "* Create a list that contains all odd integers between 5 and 27\n",
+    "* Create a function that returns a random entry from a list of countries\n",
+    "* Create a function that accepts a list of integers and returns the largest number\n",
+    "* Create a function that accepts a list of floats and returns the average"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Dictionaries\n",
+    "* Dictionaries vs. lists\n",
+    "* Creating dictionaries\n",
+    "* Inserting, removing and changing elements"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Exercise!\n"
    ]
   },
   {
