lists in slides

--- a/lecture_1/Lecture 1 slides.ipynb
+++ b/lecture_1/Lecture 1 slides.ipynb
@@ -1260,11 +1260,293 @@
    },
    "source": [
     "### Lists\n",
-    "* What are lists?\n",
     "* Creating lists\n",
     "* Inserting, removing and changing elements\n",
     "* iterating through lists\n",
     "* `len()` function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "A _list_ is a datatype that can contain multiple values in an ordered sequence. They are similar to ArrayLists in Java and contain both basic and complex data types:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "a = [1, 0, 4, 6]\n",
+    "b = ['cat', 'house', 'ideology', 'joystick']\n",
+    "c = [[1,2],[3,4]] # a list of lists (2d array)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "Python even allows for mixing data types in a list! "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "-"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "d = [1, 'Python', 2.5, [1,2], print]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "source": [
+    "Use at own risk! Things can get compliated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Accessing, adding, inserting and removing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cat\n",
+      "house\n",
+      "school\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['cat', 'house', 'structure', 'school']\n",
+    "print(a[0]) # first element\n",
+    "print(a[1]) # second element\n",
+    "print(a[-1]) # last element"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Adding to lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['cat', 'house', 'structure', 'rabbit']\n",
+      "['concrete', 'cat', 'house', 'structure', 'rabbit']\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['cat', 'house', 'structure']\n",
+    "a.append('rabbit') # insert last\n",
+    "print(a)\n",
+    "a.insert(0, 'concrete') # insert at index\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Removing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated animals list:  ['cat', 'dog', 'guinea pig']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# animals list\n",
+    "animals = ['cat', 'dog', 'rabbit', 'guinea pig']\n",
+    "\n",
+    "# 'rabbit' is removed\n",
+    "animals.remove('rabbit') # removing first match\n",
+    "\n",
+    "# Updated animals List\n",
+    "print('Updated animals list: ', animals)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "We can also remove based on index using `pop()` _[Example](https://www.programiz.com/python-programming/methods/list/pop)_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Return Value: French\n",
+      "Updated List: ['Python', 'Java', 'C++', 'C']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# programming languages list\n",
+    "languages = ['Python', 'Java', 'C++', 'French', 'C']\n",
+    "\n",
+    "# remove and return the 4th item\n",
+    "return_value = languages.pop(3)\n",
+    "print('Return Value:', return_value)\n",
+    "\n",
+    "# Updated List\n",
+    "print('Updated List:', languages)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Iterating\n",
+    "We can iterate through lists using _for_ loops:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rabbit\n",
+      "dog\n",
+      "horse\n",
+      "dolphin\n"
+     ]
+    }
+   ],
+   "source": [
+    "for animal in ['rabbit', 'dog','horse','dolphin']:\n",
+    "    print(animal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "#### Shuffle, sort and `len()`\n",
+    "We can use `len()`to get the number of elements in a list. We can also use Python's built-in shuffling and sorting:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shuffled: [3, 8, 2, 4, 5, 10, 7, 6, 9, 0, 1]\n",
+      "Sorted: [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "a = [0,1,2,3,4,5,6,7,8,9,10]\n",
+    "random.shuffle(a)\n",
+    "print('Shuffled:',a)\n",
+    "a.sort()\n",
+    "print('Sorted:',a)"
    ]
   },
   {
@@ -1279,7 +1561,11 @@
     "* Create a list that contains all odd integers between 5 and 27\n",
     "* Create a function that returns a random entry from a list of countries\n",
     "* Create a function that accepts a list of integers and returns the largest number\n",
-    "* Create a function that accepts a list of floats and returns the average"
+    "* Create a function that accepts a list of floats and returns the average\n",
+    "* Create a 2D list of lists of random size and create a function that counts the total number of entries in the lists\n",
+    "* Create a 2D list of lists with random numbers between 1 and 9.\n",
+    "    * Print list in grid\n",
+    "    * Change element in list to `'x'` if entry summed with all neighbours tiles `> 8`"
    ]
   },
   {
